<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_credit_card"
    tools:context=".CreditCard">

    <EditText
        android:id="@+id/nameOfCardOwner"
        android:layout_width="@dimen/creditCard_w"
        android:layout_height="@dimen/creditCard_h"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_backgroud"
        android:backgroundTint="@color/Gainsboro_60"
        android:ems="10"
        android:hint="@string/cardOwNAme"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/horizonta_padding"
        android:textColorHint="@color/DarkSlateGray_10"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="@dimen/creditCard_w"
        android:layout_height="@dimen/creditCard_h"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="408dp"
        android:background="@drawable/edittext_backgroud"
        android:backgroundTint="@color/Gainsboro_60"
        android:ems="10"
        android:hint="@string/carNum"
        android:inputType="number"
        android:paddingLeft="@dimen/horizonta_padding"
        android:textColorHint="@color/DarkSlateGray_10"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfCardOwner" />

    <EditText
        android:id="@+id/exDate"
        android:layout_width="@dimen/creditCard_small_w"
        android:layout_height="@dimen/creditCard_small_h"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="333dp"
        android:background="@drawable/edittext_backgroud"
        android:backgroundTint="@color/Gainsboro_60"
        android:ems="10"
        android:hint="@string/exDate"
        android:inputType="date"
        android:paddingLeft="@dimen/horizonta_padding"
        android:textColorHint="@color/DarkSlateGray_10"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cVV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

    <EditText
        android:id="@+id/cVV"
        android:layout_width="@dimen/creditCard_small_w"
        android:layout_height="@dimen/creditCard_small_h"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="333dp"
        android:background="@drawable/edittext_backgroud"
        android:backgroundTint="@color/Gainsboro_60"
        android:ems="10"
        android:hint="@string/cVV"
        android:inputType="number"
        android:paddingLeft="@dimen/horizonta_padding"
        android:textColorHint="@color/DarkSlateGray_10"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exDate"
        app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

    <Button
        android:id="@+id/saveCdBtn"
        android:layout_width="@dimen/creditCard_longBtn_w"
        android:layout_height="@dimen/creditCard_longBtn_h"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/DarkSlateGray_10"
        android:text="@string/saveCardBTn"
        android:textColor="@color/Gainsboro_60"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="17dp"
        app:layout_constraintBottom_toTopOf="@+id/updateCdBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exDate" />

    <Button
        android:id="@+id/updateCdBtn"
        android:layout_width="@dimen/creditCard_longBtn_w"
        android:layout_height="@dimen/creditCard_longBtn_h"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/DarkSlateGray_10"
        android:text="@string/updateCardBtn"
        android:textColor="@color/Gainsboro_60"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="17dp"
        app:layout_constraintBottom_toTopOf="@+id/delCdBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveCdBtn" />

    <Button
        android:id="@+id/delCdBtn"
        android:layout_width="@dimen/creditCard_longBtn_w"
        android:layout_height="@dimen/creditCard_longBtn_h"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/DarkSlateGray_10"
        android:text="@string/deleteCdBtn"
        android:textColor="@color/Gainsboro_60"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateCdBtn" />

    <Button
        android:id="@+id/creditCrdPayBtn"
        android:layout_width="@dimen/creditCard_payBtn_w"
        android:layout_height="@dimen/creditCard_payBtn_h"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/teal_700"
        android:foregroundTint="@color/DarkSlateGray_10"
        android:outlineProvider="none"
        android:text="@string/creditCdPayBtn"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delCdBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>